# AutoRunAgent

./: .gitignore  LICENSE  README.md  __init__.py  autorun.bat  cli.py  commands.py  install.ps1  install.sh  main.py  pyproject.toml  query.py  query_engine.py  requirements.txt  run_win7.bat
api/: client.py
context/: __init__.py
daemon/: __init__.py  daemon_agent.py  daemon_ball.py  daemon_core.py  daemon_webui.py  memory.py  prompts.py  run_daemon.py  triggers.py
messages/: __init__.py  types.py  utils.py
prompts/: system_prompt.py
services/: agent_registry.py  compact.py  conversations.py  gatekeeper.py  indexer.py  workflow_triggers.py
services/lsp/: __init__.py  client.py  diagnostics.py  manager.py  passive_feedback.py  server_instance.py  server_manager.py
skills/: loader.py
skills/bundled/: commands_nl.json  skill_manager.json
state/: app_state.py
tools/: __init__.py  agent_manager.py  agent_tool.py  ask_tool.py  base.py  bash_tool.py  brief_tool.py  connection_tool.py  file_edit.py  file_read.py  file_write.py  glob_tool.py  grep_tool.py  lsp_tool.py  notebook_tool.py  ocr.py  plan_mode.py  powershell_tool.py  send_message.py  skill_manager.py  skill_tool.py  ssh_tool.py  task_tool.py  todo_write.py  tool_search.py  trigger_manage.py  verify_plan.py  web_fetch.py  web_search.py  workflow.py  worktree.py
tools/ocr_engine/: NOTICE  __init__.py  anyup.py  batch_inference.py  model.py  paged_attention.py  paged_inference.py  paged_ocr_inference.py
ui/cli/: app.py  app_textual.py  permissions.py  renderer.py  suggestions.py
ui/web/: __init__.py  server.py
ui/web/frontend/: index.html  index.html.bak
utils/: config.py  env_utils.py  file_lock.py  markdown.py  model_resolver.py  security.py  ssh_client.py  tokens.py  xml_tool_parser.py
